# ApprenticeofEnder

./: .bashrc  .envrc  .gitignore  .gitmodules  .vale.ini  .zshrc  .zshrc.bak  AGENTS.md  Cargo.toml  README.md  devenv.nix  flake.nix  justfile  migration-plan.md  yls.sh
.opencode/plans/: ai-coding-permissions-lib.md  build-and-debug-agents.md  nixvim.md
.serena/: project.yml
.serena/memories/: architecture.md  conventions.md  core.md  project_overview.md  project_structure.md  style_and_conventions.md  suggested_commands.md  task_completion.md  tech_stack.md
.serena/memories/home/: ai-coding.md  core.md
config/: cachix.nix  devenv.nix  env.nix  packages.nix  processes.nix  scripts.nix
config/files/: env_spec.nix
config/languages/: default.nix  dotnet.nix  python.nix  rust.nix
configurations/darwin/: Mac.nix  Roberts-Macbook-Air-2.nix
configurations/home/: ender.nix  ender@ender-hornet.nix  robertbabaev.nix
configurations/home/ender@ender-hornet/: default.nix
mint/: .bashrc  flake.nix  home.nix
modules/darwin/: default.nix  homebrew.nix
modules/flake/: activate-home.nix  nvim.nix  toplevel.nix
modules/home/: accounts.nix  default.nix  direnv.nix  fonts.nix  git.nix  home.nix  nix-index.nix  nix.nix  nixpkgs.nix  op.nix  packages.nix  shell.nix  stylix.nix  targets.nix
modules/home/ai-coding/: mcp.nix  (+2 more)
modules/home/ai-coding/claude-code/hooks/skill-router/: main.py  pyproject.toml  skill-rules.jsonc
modules/nixos/: default.nix  myusers.nix  networking.nix
tasks/: yls.sh
templates/: README.j2.md  README.md  readme.json  techtable.j2.html
(+629 files in other folders)
