[project]
name = "skill-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.13.4"]

[dependency-groups]
dev = ["basedpyright>=1.39.8", "ruff>=0.15.19"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["**/*.py"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.13"
